--- a/src/scss/5-modules/_resultsComponent.scss
+++ b/src/scss/5-modules/_resultsComponent.scss
@@ -1,6 +1,6 @@
 .resultbox-container {
   border: getSize(resultbox-border-1);
-  color: getColor(res-box-text-1);
+  color: getColor(res-box-text-2);
   padding: getSize(padding-15px);
 
   .resultbox-graph-container {
